# jsoncfg

./: CMakeLists.txt  LICENSE  README.md  README_en.md  release.md
cmake/: jsoncfg-config.cmake.in  jsoncfg.cmake  jsonho-config.cmake.in  jsonho.cmake
examples/: CMakeLists.txt  example.cpp
include/: CMakeLists.txt  jsoncfg.hpp  jsonho.hpp
tests/: 1_string.cpp  2_float.cpp  3_integer.cpp  4_bool.cpp  5_dict.cpp  6_list.cpp  CMakeLists.txt  test_helper.hpp
tests/catch2/: catch.hpp
